--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
+
 /*Styling the balloon*/
 #balloon {
     position: absolute;
@@ -11,4 +13,9 @@
     /* Vendor prefix for Microsoft Internet Explorer */
     -o-transition: all 0.25s;
     /* Vendor prefix for Opera */
+}
+
+#score-box {
+    font-family: 'Carter One', cursive;
+    font-size: 400;
 }
