--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ h1 {
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
     font-family: Arial, sans-serif;
     margin: 0 150px;
