--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ h1 {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .container {
