--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 100vh;
+    max-height: 100vh;
     font-family: Arial, sans-serif;
     margin-top: 0;
     background-image: url('../images/balloon-arch.png');
@@ -145,7 +145,23 @@ button[type="submit"]:hover {
     text-align: center;
 }
 
-
 .hidden {
     display: none;
+}
+
+.footer {
+    height: 30px;
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+.footer p {
+    color: #333;
+    font-size: 14px;
 }
