Add responsive styles to form on index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,8 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
+    /* Align items at the top */
 }
 
 .container-game {
@@ -96,7 +98,8 @@ h1 {
     background-color: lightgrey;
     padding: 20px;
     border-radius: 5px;
-    
+    margin-bottom: 50px;
+    /* Add margin-bottom to create space between form and footer */
 }
 
 .form {
@@ -151,7 +154,7 @@ button[type="submit"]:hover {
 
 .footer {
     height: 30px;
-    background-color: #f5f5f5;
+    background-color: #a4a4a4;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -159,9 +162,47 @@ button[type="submit"]:hover {
     position: fixed;
     width: 100%;
     bottom: 0;
+    margin-top: auto;
 }
 
 .footer p {
     color: #333;
     font-size: 14px;
+}
+
+@media screen and (max-width: 550px) {
+    .form {
+        flex-direction: column;
+    }
+
+        .form-levels {
+            font-family: 'Carter One', cursive;
+            font-size: 400;
+        }
+    
+        label {
+            margin-right: 10px;
+        }
+    
+        input[type="text"],
+        select {
+            padding: 0 5px;
+            margin: 10px 0;
+            text-align: center;
+        }
+    
+        button[type="submit"] {
+            padding: 8px 15px;
+            background-color: #16d71c;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            height: 30px;
+            /* Adjust the height to match the label */
+        }
+    
+        button[type="submit"]:hover {
+            background-color: #45a049;
+        }
 }
