--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ h1 {
 }
 
 .form-container {
-    background-color: lightgrey;
+    background-color: rgb(237, 181, 49);
     padding: 20px;
     border-radius: 5px;
     margin-bottom: 50px;
@@ -129,7 +129,7 @@ select {
 
 button[type="submit"] {
     padding: 8px 15px;
-    background-color: #16d71c;
+    background-color: #1616d7;
     color: white;
     border: none;
     border-radius: 4px;
@@ -139,7 +139,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #363e6f;
 }
 
 .instructions {
@@ -192,14 +192,7 @@ button[type="submit"]:hover {
         }
     
         button[type="submit"] {
-            padding: 8px 15px;
-            background-color: #16d71c;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            height: 30px;
-            /* Adjust the height to match the label */
+            padding: 8px 25px;
         }
     
         button[type="submit"]:hover {
