--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@
     /* Vendor prefix for Opera */
     visibility: hidden;
     height: 0;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 600px) {
@@ -124,7 +125,6 @@ select {
     border-radius: 4px;
     margin-right: 10px;
     height: 30px;
-    /* Adjust the height as needed */
 }
 
 button[type="submit"] {
@@ -142,6 +142,10 @@ button[type="submit"]:hover {
     background-color: #363e6f;
 }
 
+/* Add spacing between form fields */
+.space {
+    margin-bottom: 20px;
+}
 .instructions {
     display: block;
     margin: 20% 25% 0 25%;
