--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,21 +83,20 @@ h1 {
 }
 
 .form-container {
-    background-color: rgb(237, 181, 49);
-    padding: 20px;
+    background-color: rgb(234, 237, 49);
+    padding: 10px;
     border-radius: 5px;
-    margin: 20px 25px;
-    
-    display: flex;
-    justify-content: center;
-    
-    /* Add margin-bottom to create space between form and footer */
+    text-align: center;
+    margin: 5px 25%;
 }
 
-.form {
+form {
     display: flex;
-    flex-direction: row;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 5px;
 }
 
 .form-levels, .form-sound {
@@ -111,15 +110,20 @@ label {
 
 input[type="text"],
 select {
+    flex-grow: 1;
+    flex-basis: 300px;
+    display: flex;
+    
     padding: 0 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    margin-right: 10px;
+    
     height: 30px;
 }
 
 button[type="submit"] {
-    padding: 8px 15px;
+    flex-grow: 4;
+    flex-basis: 200px;
     background-color: #1616d7;
     color: white;
     border: none;
@@ -176,7 +180,7 @@ button[type="submit"]:hover {
     }
 }
 
-@media screen and (max-width: 670px) {
+/*@media screen and (max-width: 670px) {
     .form {
         flex-direction: column;
     }
@@ -200,4 +204,4 @@ button[type="submit"]:hover {
         button[type="submit"] {
             padding: 8px 25px;
         }
-}
+}*/
