--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto+Mono:wght@300;500&display=swap');
 
 /* Styling the balloon */
 #blue-balloon,
@@ -39,16 +40,17 @@ h1 {
     font-size: 400;
 }
 
-
-
 #body-index {
-    max-height: 100%;
     font-family: Arial, sans-serif;
-    margin-top: 0;
     background-image: url('../images/balloon-arch.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 100vh;
+    margin: 0;
+    /* To enable sticky footer */
+    display: grid;
+    grid-template-rows: 1fr auto;
 }
 
 #body-game {
@@ -63,15 +65,6 @@ h1 {
     background-repeat: no-repeat;
     overflow: hidden;
 }
-
-/*.container {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    /* Align items at the top 
-}*/
 
 .container-game {
     display: flex;
@@ -119,7 +112,7 @@ select {
 }
 
 button[type="submit"] {
-    flex-grow: 4;
+    flex-grow: 1;
     background-color: #1616d7;
     color: white;
     border: none;
@@ -137,7 +130,6 @@ button[type="submit"]:hover {
     margin-bottom: 20px;
 }
 .instructions {
-    display: block;
     padding: 20% 25% 0 25%;
     text-align: center;
 }
@@ -146,19 +138,21 @@ button[type="submit"]:hover {
     display: none;
 }
 
-.footer {
-    position: relative;
-    height: 30px;
-    background-color: #a4a4a4;
-    
+#footer {
+    text-align: center;
     width: 100%;
-    
-    margin-top: auto;
+    margin: 0;
 }
 
-.footer p {
+#footer p {
     color: rgb(0, 0, 0);
     font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1px;
+}
+
+#footer a {
+    color: #1A1A1A;
 }
 
 @media screen and (min-width: 600px) {
