--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ button[type="submit"]:hover {
     margin-bottom: 20px;
 }
 .instructions {
-    padding: 10% 10% 0 10%;
+    padding: 20% 10% 0 10%;
     text-align: center;
 }
 
@@ -158,7 +158,7 @@ button[type="submit"]:hover {
 
 #footer p {
     color: rgb(0, 0, 0);
-    font-size: 14px;
+    font-size: 10px;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 1px;
 }
@@ -185,7 +185,11 @@ button[type="submit"]:hover {
     }
 
     .instructions {
-        padding: 10% 25% 0 25%;
+        padding: 15% 25% 0 25%;
+    }
+
+    #footer p {
+    font-size: 14px;
     }
 }
 
