--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,8 @@ label {
 
 input[type="text"],
 select {
-    flex-grow: 1;
+    flex-grow: 2;
+    width: 100%;
     display: flex;
     padding: 0 5px;
     border: 1px solid #ccc;
@@ -119,6 +120,7 @@ select {
 
 button[type="submit"] {
     flex-grow: 1;
+    width: auto;
     background-color: #1616d7;
     color: white;
     border: none;
@@ -190,6 +192,18 @@ button[type="submit"]:hover {
 
     #footer p {
     font-size: 14px;
+    }
+
+    input[type="text"] {
+    width: 100%;
+    }
+
+    select {
+        width: 40%;
+    }
+
+    button[type="submit"] {
+        width: auto;
     }
 }
 
