--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,6 @@ button[type="submit"]:hover {
 }
 
 .modal {
-    display: flex;
     visibility: hidden;
     position: fixed;
     z-index: 1;
@@ -180,52 +179,54 @@ button[type="submit"]:hover {
     height: 100vh;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.5);
-    align-items: center;
-    justify-content: center;
 }
 
 .modal-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
     background-color: white;
-    margin: 15% auto;
+    margin: 0 auto;
     padding: 20px;
     border: 5px solid #888;
+    border-radius: 5px;
     width: 300px;
-    text-align: center;
+    max-width: 82%;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal-content p {
-    font-size: 20px;
-    margin-bottom: 20px;
+    width: 100%;
+    font-size: 30px;
     font-family: 'Carter One', sans-serif;
+    text-align: center;
 }
 
 .modal-content button {
+    flex: 1;
+    width: 50%;
     background-color: #1616d7;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    margin-right: 10px;
     cursor: pointer;
 }
 
 .modal-content button:last-child {
-    background-color: #f44336;
+    background-color: rgb(234, 237, 49);
+    color: black;
 }
 
 .modal-content button:hover {
     opacity: 0.8;
 }
 
-.close {
-    color: #aaa;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
 
 @media screen and (min-width: 600px) {
 
@@ -262,5 +263,9 @@ button[type="submit"]:hover {
 
     button[type="submit"] {
         width: auto;
+    }
+
+    .modal-content {
+        max-width: 100%;
     }
 }
