--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,21 +25,18 @@
 }
 
 h1 {
-    font-family: 'Carter One', cursive;
+    font-family: 'Carter One', sans-serif;
     font-size: 400;
     text-align: center;
 }
 
-#score-box {
-    font-family: 'Carter One', cursive;
+/* Score display */
+#score-box, #score-label {
+    font-family: 'Carter One', sans-serif;
     font-size: 400;
 }
 
-#score-label {
-    font-family: 'Carter One', cursive;
-    font-size: 400;
-}
-
+/* body of index page*/
 #body-index {
     font-family: Arial, sans-serif;
     background-image: url('../images/balloon-arch.png');
@@ -53,6 +50,7 @@ h1 {
     grid-template-rows: 1fr auto;
 }
 
+/* body of gaming pages easy.html medium.html and hard.html */
 #body-game {
     display: flex;
     align-items: flex-start;
@@ -79,8 +77,7 @@ h1 {
     gap: 16px;
 }
 
-
-
+/* form */
 .form-container {
     background-color: rgb(234, 237, 49);
     padding: 10px;
@@ -142,16 +139,19 @@ button[type="submit"]:hover {
     text-align: center;
 }
 
+/* Background of instructions */
 .blackout {
     background-color: rgba(237, 237, 237, 0.7); /* 0.5 opacity */
     border-radius: 5px;
     padding: 10px;
 }
 
+/* Hide any element using this class */
 .hidden {
     display: none;
 }
 
+/* Footer */
 #footer {
     text-align: center;
     width: 100%;
@@ -169,6 +169,7 @@ button[type="submit"]:hover {
     color: #1A1A1A;
 }
 
+/* Game over modal */
 .modal {
     visibility: hidden;
     position: fixed;
