--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ h1 {
 /* body of index page*/
 #body-index {
     font-family: Arial, sans-serif;
+    /* background image source http: //www.clipartbest.com/free-balloon-png-art */
     background-image: url('../images/balloon-arch.png');
     background-size: cover;
     background-position: center;
@@ -57,6 +58,7 @@ h1 {
     height: 90vh;
     flex-direction: column;
     align-items: center;
+    /* background image source http: //www.clipartbest.com/free-balloon-png-art */
     background-image: url('../images/balloon-arch-opacity.png');
     background-size: cover;
     background-position: center;
