--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,12 +72,17 @@ h1 {
     padding: 10px;
     border-radius: 5px;
     text-align: center;
-    margin: 5px 10%;
+    
     display: flex;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    gap: 16px;
 }
+
+ #score-label {
+    flex-grow: 1;
+    flex-basis: 160px;
+ }
 
 /* form */
 .form-container {
